# parametric_fingerboard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
output/: abs_delta_middle_longest_check.stl  auto_resize_stairs_check.stl  cmp_base.stl  cmp_steep.stl  derived_dims_smoke.stl  edge_20_allowed.stl  hand_span_div3_check.stl  mapping_consistent_order_check.stl  mapping_mirrored_check.stl  outer_wall_fixed_now.stl  outer_wall_guaranteed_check.stl  post_restore_smoke.stl  side_text_1_2_deep_imprint.stl  single_center_hole_no_pocket_holes.stl  single_hole_rotated_axis.stl  single_hole_side_stairs.stl  smoke_test_asymmetric.stl  stairs_formula_fixed_check.stl  stairs_logic_smoke.stl  stairs_outer_wall_side_check.stl  stairs_pinky_baseline_strict.stl
src/parametric_fingerboard/: __init__.py  app.py  model.py
src/parametric_fingerboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/parametric_fingerboard/gui/: main_window.py
