[project]
name = "parametric-fingerboard"
version = "0.1.0"
description = "Desktop GUI for generating parametric fingerboard STL models with independent left/right parameters"
requires-python = ">=3.10"
dependencies = [
  "cadquery>=2.5",
  "numpy>=2.2.6",
  "PyOpenGL>=3.1.10",
  "PyOpenGL_accelerate>=3.1.10",
  "pyqtgraph>=0.14.0",
  "PyQt6>=6.11.0",
  "trimesh>=4.12.2",
]

[project.scripts]
fingerboard-gui = "parametric_fingerboard.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
